// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsagePlan /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 12px;
}

<div
    className="emotion-0"
  >
    Project Tier: 
    Premier
  </div>,
  .emotion-0 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

<h3
    className="emotion-0"
  >
    Usage:
  </h3>,
  .emotion-0 {
  padding-bottom: 16px;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

<div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video Hours:
       
      0
    </h4>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

<div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Images / Documents: 
      97
    </h4>
  </div>,
]
`;

exports[`<UsagePlan /> should render properly with no modules 1`] = `
Array [
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 12px;
}

<div
    className="emotion-0"
  >
    Project Tier: 
    Premier
  </div>,
  .emotion-0 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

<h3
    className="emotion-0"
  >
    Usage:
  </h3>,
  .emotion-0 {
  padding-bottom: 16px;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

<div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video Hours:
       
      0
    </h4>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

<div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Images / Documents: 
      97
    </h4>
  </div>,
]
`;

exports[`<UsagePlan /> should render properly with over usage 1`] = `
Array [
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 12px;
}

<div
    className="emotion-0"
  >
    Project Tier: 
    Premier
  </div>,
  .emotion-0 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

<h3
    className="emotion-0"
  >
    Usage:
  </h3>,
  .emotion-0 {
  padding-bottom: 16px;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

<div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video Hours:
       
      320
    </h4>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

<div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Images / Documents: 
      30,040
    </h4>
  </div>,
]
`;
